Footer overlap fix

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ div .col {
 body {
     background-color: #CBEBFC;
     font-family: 'Nanum Gothic', sans-serif;
+    margin-bottom: 75px;
 }
 
 .navbar-brand{
